test/simple/correct/PMC1.hs
module PMC1 where

main :: Int
main = id 3
