test/simple/typeerrors/Heuristics/SimilarFunction1.hs
module SimilarFunction1 where

main :: [Int]
main = xs : ys

xs = []

ys = [1,2,3]
